# netzausbau_pdf_parser

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  mypy.yml
geocoding/: README.md  pyproject.toml
geocoding/ipython_snippets/: explore_nominatim_api.py  filter_osm_by_bounding_box.py
input/00080_Stromnetz Berlin GmbH/: Netzausbauplan Stromnetz Berlin
input/00102_Braunschweiger Netz GmbH/: Netzausbauplan 2024 Braunschweiger Netz GmbH_ungültig  Netzausbauplan 2024_V2 Stand 26.08.2024 ungültig
input/00221_ELE Verteilnetz GmbH/: Netzausbauplan 2024
input/00396_Pfalzwerke Netz AG/: NAP_2024 (Erfassung vom 30.04.2024)
input/00645_Stadtwerke Ulm_Neu-Ulm Netze GmbH/: Netzausbauplan 2024  Netzausbauplan 2024 Update
input/01064_Syna GmbH/: Bericht gemäß § 14 Abs. 2 EnWG i.V.m. § 14d EnWG Stand 30.04.2024  Bericht nach § 14 Abs. 2 EnWG i. V. m. § 14d EnWG Stand 29.07.2022
input/07137_Avacon Netz GmbH/: Netzausbauplan 2024 Avacon Netz GmbH ungültig
input/07388_LSW Netz GmbH & Co. KG/: Engpassbericht der LSW Netz GmbH & Co. KG gem. § 14d EnWG
input/osm/: berlin-latest.osm.pbf  berlin-power.osm.pbf
netzausbau_extractor/: extractor.py  heuristics.py  llm_converter.py  llm_normalizer.py  models.py  nuextract.py  pdf_downloader.py  pdf_reader.py  writer.py
netzausbau_extractor/extraction/: ollama.py
netzausbau_extractor/extraction/data/schemas/: v2.json
netzausbau_extractor/schemas/: v1.json
netzausbauplan_processing/: __init__.py  cli.py  heuristics.py  llm_normalizer.py  writer.py
netzausbauplan_processing/conversion/: llm_converter.py
netzausbauplan_processing/extraction/: extractor.py  nuextract.py  ollama.py
netzausbauplan_processing/extraction/data/: models.py  schema.csv  schema.py
pdfplumber_table_extraction/: README.md  streamlit_pdf_viewer.py  streamlit_tablefinder.py  streamlit_tableparser.py  vibe_aggregate_output_csvs.py
pdfplumber_table_extraction/ipython_snippets/: analyse_unique_values.py  word_left_histogram.py
pdfplumber_table_extraction/output/00003_Regionetz GmbH/: Bericht Regionetz Netzausbauplan gemäß § 14 Abs. 2 EnWG i.V.m. § 14d EnWG (Erstfassung vom 30.04.2024).pdf.0.csv
pdfplumber_table_extraction/output/00080_Stromnetz Berlin GmbH/: Netzausbauplan Stromnetz Berlin GmbH 2024 (Anpassung Maßnahmeplan, Anlage 2).pdf.0.csv
pdfplumber_table_extraction/output/00080_Stromnetz_Berlin/: Netzausbauplan Stromnetz Berlin GmbH 2024 (Anpassung Maßnahmeplan, Anlage 2).pdf.json
pdfplumber_table_extraction/output/00202_ovag Netz GmbH/: 2024_08_12_NAP_ovag_Netz_GmbH.pdf.0.csv  2024_08_12_NAP_ovag_Netz_GmbH.pdf.1.csv
pdfplumber_table_extraction/output/00259_Hamburger Energienetze GmbH/: Netzausbauplan_2024_final.pdf.0.csv
pdfplumber_table_extraction/output/00350_Energienetze Mittelrhein GmbH & Co. KG/: 2025-04-30 Netzausbauplanung.pdf.0.csv
pdfplumber_table_extraction/output/00496_EWE NETZ GmbH/: EWE NETZ_Netzausbauplan_Par 14d EnWG_2024_1.pdf.0.csv
pdfplumber_table_extraction/output/00531_Regensburg Netz GmbH/: Netzausbauplan.pdf.0.csv
pdfplumber_table_extraction/output/00702_Mainfranken Netze GmbH/: NAP-Bericht_(mit_Karten)_30.04.2024.pdf.0.csv  NAP-Bericht_(mit_Karten)_30.04.2024.pdf.1.csv
pdfplumber_table_extraction/pdf_annotator/: annotator.html  annotator.js
pdfplumber_table_extraction/pdf_viewer/: viewer.css  viewer.html  viewer.js
tests/: test_heuristics.py  test_llm_converter.py  test_measure_models.py
(+24 files in other folders)
