[project]
name = "netzausbau-extractor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "pymupdf>=1.24",
  "pdfplumber>=0.11",
  "pandas>=2.2",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "ollama (>=0.6.2,<0.7.0)",
]

[project.scripts]
netzausbau-extract = "netzausbau_extractor.cli:app"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
packages = "netzausbau_extractor"

[tool.poetry.group.dev.dependencies]
ipython = "^9.14.0"

