[project]
name = "netzausbau-extractor"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
dependencies = [
  "pydantic>=2.8",
  "pymupdf>=1.24",
  "pdfplumber>=0.11",
  "pandas>=2.2",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "ollama (>=0.6.2,<0.7.0)",
  "vnbdigital-client (>=0.4.6,<0.5.0)",
  "torch (==2.6.0)",
  "torchvision (==0.21.0)",
  "docling (==2.99.0)",
  "docling-slim[models-vlm-transformers] (==2.99.0)",
  "qwen-vl-utils (>=0.0.14,<0.0.15)",
  "transformers (==4.57.6)",
  "accelerate (>=1.13.0,<2.0.0)",
  "safetensors (>=0.8.0,<0.9.0)",
]

[project.scripts]
netzausbau-extract = "netzausbau_extractor.cli:app"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
packages = "netzausbau_extractor"

[tool.poetry.group.dev.dependencies]
ipython = "^9.14.0"
pyperclip = "^1.11.0"
mypy = "^2.1.0"
ruff = "^0.15.17"

