[project]
name = "netzausbau-extractor"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
package-mode = false
dependencies = [
  "pydantic>=2.8",
  "pymupdf>=1.24",
  "pdfplumber @ git+https://github.com/jsvine/pdfplumber.git@c58dfb5e598ec6375e7c1119b81bd64f05829484",
  "pandas>=2.2",
  "typer>=0.12",
  "rich>=13.7",
  "ollama (>=0.6.2,<0.7.0)",
  "vnbdigital-client (>=0.4.6,<0.5.0)",
  "torch (==2.6.0)",
  "transformers (==4.57.6)",
  "requests (>=2.34.2,<3.0.0)",
  "sentence-transformers (>=5.6.0,<6.0.0)",
  "streamlit[pdf] (>=1.59.2,<2.0.0)",
  "geopandas (>=1.1.4,<2.0.0)",
  "nominatim-api (>=5.3.2,<6.0.0)",
  "gspread (>=6.2.1,<7.0.0)",
  "gspread-dataframe (>=4.0.0,<5.0.0)",
]

[project.scripts]
netzausbau-extract = "netzausbau_extractor.cli:app"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
packages = "netzausbau_extractor"

[tool.poetry.group.dev.dependencies]
ipython = "^9.14.0"
pyperclip = "^1.11.0"
mypy = "^2.1.0"
ruff = "^0.15.17"
basedpyright = "^1.39.9"
deptry = "^0.25.1"

