[project]
name = "netzausbau-extractor"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pandas>=2.2",
  "requests (>=2.34.2,<3.0.0)",
  "geopandas (>=1.1.4,<2.0.0)",
  "nominatim-api (>=5.3.2,<6.0.0)",
  "gspread (>=6.2.1,<7.0.0)",
  "gspread-dataframe (>=4.0.0,<5.0.0)",
  "pyrosm (>=0.12.0,<0.13.0)",
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^9.14.0"
pyperclip = "^1.11.0"
mypy = "^2.1.0"
ruff = "^0.15.17"
basedpyright = "^1.39.9"
deptry = "^0.25.1"

